--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,5 +15,4 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
           registry: ghcr.io
-          tag_names: true
-          tag_semver: true
+          tags: "latest"
