--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-requests
-beautifulsoup4
-flask
-flask-cors
-gunicorn
+requests==2.27.1
+beautifulsoup4==4.11.1
+flask==2.1.1
+flask-cors==3.0.10
+gunicorn==20.1.0
+diskcache==5.4.0
