--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - 80
     environment:
       - CACHE_DIR=/tmp/cache
+      - CLEAR_CACHE=False
     volumes:
       - epos-cache:/tmp/cache
     # labels:
