--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
     environment:
       - CACHE_DIR=/cache
       - CLEAR_CACHE=False
+      - CELERY_BROKER_URL=redis://redis:6379/0
+      - CELERY_RESULT_BACKEND=redis://redis:6379/0
     volumes:
       - epos-cache:/cache
     # labels:
@@ -32,7 +34,6 @@ services:
     environment:
       - CACHE_DIR=/cache
       - CLEAR_CACHE=False
-      - FLASK_DEBUG=1
       - CELERY_BROKER_URL=redis://redis:6379/0
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
 
@@ -49,13 +50,18 @@ services:
         "server.celery",
         "flower",
         "--address=0.0.0.0",
-        "--port=5555"
+        "--port=80",
+        "--url_prefix=flower"
       ]
     environment:
       - CELERY_BROKER_URL=redis://redis:6379/0
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
+    labels:
+      - traefik.enable=${TRAEFIK_ENABLE:-true}
+      - traefik.http.routers.epos-flower.rule=Host(`${EPOS_DOMAIN}`) && PathPrefix(`/flower`)
+      - traefik.http.routers.epos-flower.tls.certresolver=le
     ports:
-      - 5555:5555
+      - 5555:80
 
   redis:
     image: redis:7-alpine
