--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
       [
         "celery",
         "--app",
-        "server.celery",
+        "app.celery",
         "worker",
         "--pool",
         "eventlet",
@@ -63,7 +63,7 @@ services:
       [
         "celery",
         "--app",
-        "server.celery",
+        "app.celery",
         "flower",
         "--address=0.0.0.0",
         "--port=80",
