--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,18 +1,46 @@
-name: Build and Publish
+name: Build and Push Docker Image
+
 on:
-  push:
-    branches: [master]
   workflow_dispatch:
+  push:
+    branches:
+      - master
+
 jobs:
-  deploy:
+  build-and-push-merger:
     runs-on: ubuntu-latest
+    permissions:
+      packages: write
     steps:
-      - uses: actions/checkout@v2
-      - name: Publish to Registry
-        uses: elgohr/Publish-Docker-Github-Action@master
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set output for version
+        id: date
+        run: echo "::set-output name=version::$(date +'%Y.%m.%d-%H%M')"
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
         with:
-          name: zkhan93/epos
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
           registry: ghcr.io
-          tags: "latest"
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push Docker image for merger
+        uses: docker/build-push-action@v3
+        with:
+          context: merger
+          push: true
+          platforms: linux/amd64,linux/arm64,linux/arm/v7
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          tags: |
+            ghcr.io/${{github.repository}}:${{ steps.date.outputs.version }}
+            ghcr.io/${{github.repository}}:latest
+
